--- a/app/src/main/res/layout/item_list_placeholder.xml
+++ b/app/src/main/res/layout/item_list_placeholder.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/shimmerAnimeList"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:shimmer_auto_start="true">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
