--- a/app/src/main/res/layout/item_trending_placeholder.xml
+++ b/app/src/main/res/layout/item_trending_placeholder.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/shimmerAnimeListTrending"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:shimmer_auto_start="true">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -32,18 +31,6 @@
             android:src="@color/shimmer_grey"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/shOne"
-            app:riv_corner_radius="16dp" />
-
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/shThree"
-            android:layout_width="200dp"
-            android:layout_height="250dp"
-            android:layout_margin="8dp"
-            android:scaleType="fitXY"
-            android:src="@color/shimmer_grey"
-            app:layout_constraintBottom_toBottomOf="@+id/shTwo"
-            app:layout_constraintStart_toEndOf="@+id/shTwo"
-            app:layout_constraintTop_toTopOf="@+id/shTwo"
             app:riv_corner_radius="16dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
